feat: add js file with codes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+    <div class="formDiv">
+        <form action="">
+            <label for="">To do List</label>
+            <input type="text" class="inputTask">
+            <button>Add To DO</button>
+        </form>
+    </div>
+
+    <div class="tasks">
+        <h3>My To DO List</h3>
+        <div class="tasks_list">
+
+        </div>
+    </div>
     <script src="js.js"></script>
 </body>
 
