fix: class names

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="tasks">
         <h3>My To DO List</h3>
-        <div class="tasks_list">
+        <div class="todo-list">
 
         </div>
     </div>
